fix(rma):fixed stock-entry list ui

--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
@@ -55,7 +55,8 @@ mat-header-cell {
   flex-wrap: nowrap;
   min-width: 200px;
 }
-.mat-header-row,
-.mat-row {
-  display: inline-flex;
+.mat-row,
+.mat-header-row {
+  min-width: 150%;
+  width: 100%;
 }
