--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -30,9 +30,22 @@
               <input
                 matInput
                 placeholder="Customer"
+                [matAutocomplete]="Customer"
                 [(ngModel)]="customer"
-                (keyup.enter)="setFilter()"
               />
+              <mat-autocomplete
+                autoActiveFirstOption
+                #Customer="matAutocomplete"
+                [displayWith]="getCustomerOption"
+                (optionSelected)="setFilter()"
+              >
+                <mat-option
+                  *ngFor="let option of customerList"
+                  [value]="option"
+                >
+                  {{ option.name }}
+                </mat-option>
+              </mat-autocomplete>
             </mat-form-field>
           </ion-col>
           <ion-col>
