--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -75,7 +75,7 @@
                   *ngFor="let f_warehouse of warehouses"
                   [value]="f_warehouse"
                 >
-                  {{f_warehouse}}
+                  {{f_warehouse.name}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -91,7 +91,7 @@
                   *ngFor="let t_warehouse of warehouses"
                   [value]="t_warehouse"
                 >
-                  {{t_warehouse}}
+                  {{t_warehouse.name}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
