feat(excel-rma): Add serial CSV dump to purcase sales and serial search

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -249,6 +249,9 @@
         </ion-card-title>
       </ion-col>
       <ion-col class="ion-text-right">
+        <ion-button class="ion-text-right" [disabled]="!this.purchasedSerialsDataSource.length" color="tertiary" (click)="downloadSerials()">
+          Download CSV
+        </ion-button>
         <ion-button class="ion-text-right" [disabled]="readonly" color="tertiary" (click)="getDeliveredSerials()">
           Get Serials
         </ion-button>
