feat(excel-rma): Add naming series for stock in and out
fix serial tab disabled for calceled invoice

add redirection to 1st tab after serials are submitted

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -5,7 +5,7 @@
   class="ion-margin-end"
   *ngIf="remaining > 0"
 >
-  <ion-fab-button disabled="!permissionState.delivery_note.create" class="fab-position" (click)="submitDeliveryNote()">
+  <ion-fab-button [disabled]="!permissionState.delivery_note.create" class="fab-position" (click)="submitDeliveryNote()">
     <ion-icon name="lock-closed"></ion-icon>
   </ion-fab-button>
 </ion-fab>
