--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -32,7 +32,7 @@
         <ion-segment-button value="0" *ngIf="permissionState.sales_invoice.active">
           <ion-label>Details</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="1" *ngIf="sales_invoice_name && permissionState.delivery_note.active">
+        <ion-segment-button value="1" *ngIf="status !== 'Canceled' && sales_invoice_name && permissionState.delivery_note.active">
           <ion-label>Serials</ion-label>
         </ion-segment-button>
         <ion-segment-button value="2" *ngIf="sales_invoice_name">
