feat(excel-rma): Removed warranty validation from sales/purchase
updated permissions for UI router links

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -81,7 +81,7 @@
               class="ion-margin-start ion-no-padding"
             >
               <ion-item
-                *ngIf="loggedIn && permissionState?.sales_invoice?.active"
+                *ngIf="permissionState.sales_invoice.active && loggedIn"
                 routerLink="/sales"
                 lines="none"
                 routerLinkActive="active"
