feat(excel-rma): Fix bugs for sales invoice
add validation to policies for validating item rate

--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -150,16 +150,9 @@
             <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
             <mat-cell
               *matCellDef="let row"
-              [ngStyle]="{
-              color:
-                row.status === 'Completed'
-                  ? 'green'
-                  : row.status === 'To Bill'
-                  ? 'orange'
-                  : 'red'
-            }"
+              [ngStyle]="{color: 'red'}"
             >
-              {{ row.status }}
+              Returned
             </mat-cell>
             <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
