--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
@@ -15,24 +15,10 @@
   font-weight: bold;
 }
 
-.mat-column-total {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.mat-column-due_amount {
-  display: flex;
-  padding-right: 20px;
-  justify-content: flex-end;
-}
-
 .date-filter-text {
   font-size: 0.7rem;
 }
 
-.mat-column-sr_no {
-  flex: 0 0 5%;
-}
 .example-container {
   box-shadow: none;
   height: auto;
@@ -40,21 +26,14 @@
   overflow: auto;
 }
 
-table {
-  width: 150%;
+// common width for all columns
+[class*='mat-column-']{
+  flex: 0 0 9% !important;
+  min-width: 150px !important;
 }
 
-td.mat-column-star {
-  width: 20px;
-  padding-right: 8px;
-}
-
-th.mat-column-position,
-td.mat-column-position {
-  padding-left: 8px;
-}
-
-mat-header-cell {
-  flex-wrap: nowrap;
-  min-width: 200px;
+// similarly override any table column with name from matColumnDef.
+.mat-column-sr_no {
+  flex: 0 0 5% !important;
+  min-width: 10px !important;
 }
