--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
@@ -2,34 +2,19 @@
   min-height: 90vh;
 }
 
-.full-width {
-  width: 100%;
-}
-
 .search-models {
   padding: 0em 1em 0em 1em;
 }
 
-.mat-column-total {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 20px;
-}
-
-.footer {
-  font-weight: bold;
-}
-
-.mat-column-sr_no {
-  flex: 0 0 5%;
-}
 .date-filter-text {
   font-size: 0.7rem;
 }
+
 .full-width {
   width: 100%;
   color: black;
 }
+
 .example-container {
   box-shadow: none;
   height: auto;
@@ -37,26 +22,14 @@
   overflow: auto;
 }
 
-table {
-  width: 150%;
+// common width for all columns
+[class*='mat-column-']{
+  flex: 0 0 9% !important;
+  min-width: 150px !important;
 }
 
-td.mat-column-star {
-  width: 20px;
-  padding-right: 8px;
-}
-
-th.mat-column-position,
-td.mat-column-position {
-  padding-left: 8px;
-}
-
-mat-header-cell {
-  flex-wrap: nowrap;
-  min-width: 200px;
-}
-.mat-row,
-.mat-header-row {
-  min-width: 150%;
-  width: 100%;
+// similarly override any table column with name from matColumnDef.
+.mat-column-sr_no {
+  flex: 0 0 5% !important;
+  min-width: 10px !important;
 }
