--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
@@ -2,17 +2,21 @@
   min-height: 90vh;
 }
 
+.full-width {
+  width: 100%;
+  color: black;
+}
+
 .search-models {
   padding: 0em 1em 0em 1em;
 }
 
-.date-filter-text {
-  font-size: 0.7rem;
+.footer {
+  font-weight: bold;
 }
 
-.full-width {
-  width: 100%;
-  color: black;
+.date-filter-text {
+  font-size: 0.7rem;
 }
 
 .example-container {
