--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -24,7 +24,7 @@
 
   <ion-card-content class="ion-no-padding">
     <div class="example-container mat-elevation-z8">
-      <mat-table #table [dataSource]="dataSource">
+      <mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="stock_voucher_number">
           <mat-header-cell *matHeaderCellDef
             >Stock Voucher Number</mat-header-cell
