--- a/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.scss
+++ b/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.scss
@@ -1,3 +1,8 @@
+
+.full-width {
+  width: 100%;
+}
+
 .example-container {
   box-shadow: none;
   height: auto;
@@ -5,21 +10,24 @@
   overflow: auto;
 }
 
-table {
-  width: 150%;
+// common width for all columns
+[class*='mat-column-']{
+  flex: 0 0 13.5% !important;
+  min-width: 200px !important;
 }
 
-td.mat-column-star {
-  width: 20px;
-  padding-right: 8px;
+// similarly override any table column with name from matColumnDef.
+.mat-column-failCount {
+  flex: 0 0 5% !important;
+  min-width: 50px !important;
 }
 
-th.mat-column-position,
-td.mat-column-position {
-  padding-left: 8px;
+.mat-column-parent {
+  flex: 0 0 20% !important;
+  min-width: 300px !important;
 }
 
-mat-header-cell {
-  flex-wrap: nowrap;
-  min-width: 200px;
+.mat-column-serial_no {
+  flex: 0 0 20% !important;
+  min-width: 300px !important;
 }
