feat(excel-rma): Add validation for valid selected input
update stock fetching for items with special char

update UI for remaining components

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -25,13 +25,21 @@
       <ion-row>
         <ion-col size-md="6">
           <mat-form-field class="example-full-width">
-            <input [formControl]="warehouseFormControl" type="text" placeholder="Select Warehouse" matInput
-              [matAutocomplete]="auto" required />
+            <input  matInput
+            placeholder="Select Warehouse" 
+            [formControl]="warehouseFormControl" 
+            type="text" 
+            (focusout)="validateInput(warehouseFormControl, filteredWarehouseList)"
+            [matAutocomplete]="auto" required />
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="getOptionText">
               <mat-option *ngFor="let option of filteredWarehouseList | async" [value]="option">
                 {{ option }}
               </mat-option>
             </mat-autocomplete>
+            <mat-error *ngIf="warehouseFormControl.hasError('falseValse')">
+              You should select a value from dropdown only. 
+              <strong>'{{warehouseFormControl.value}}'</strong> is not allowed.
+            </mat-error>
             <mat-error *ngIf="warehouseFormControl.hasError('required')">
               Warehouse is <strong>required</strong>
             </mat-error>
