--- a/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-return/add-sales-return.page.html
@@ -100,6 +100,7 @@
                 placeholder="Select Warehouse"
                 matInput
                 [formControl]="warehouseFormControl"
+                (focusout)="validateInput(warehouseFormControl, filteredWarehouseList)"
                 [matAutocomplete]="auto"
               />
               <mat-autocomplete
@@ -114,6 +115,10 @@
                   {{ option }}
                 </mat-option>
               </mat-autocomplete>
+              <mat-error *ngIf="warehouseFormControl.hasError('falseValse')">
+                You should select a value from dropdown only. 
+                <strong>'{{warehouseFormControl.value}}'</strong> is not allowed.
+              </mat-error>
             </mat-form-field>
           </ion-col>
         </ion-row>
