--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -27,6 +27,7 @@
             placeholder="Default Company"
             aria-label="Default Company"
             [matAutocomplete]="autoCompany"
+            (focusout)="validateInput(f.defaultCompany, companies)"
             formControlName="defaultCompany"
           />
           <mat-autocomplete #autoCompany="matAutocomplete">
@@ -37,6 +38,10 @@
               <span>{{company.name}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.defaultCompany.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.defaultCompany.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -44,6 +49,7 @@
             required
             placeholder="ERPNext Timezone"
             aria-label="ERPNext Timezone"
+            (focusout)="validateInput(f.timeZone, timezones)"
             [matAutocomplete]="autoTZ"
             formControlName="timeZone"
           />
@@ -55,6 +61,10 @@
               <span>{{timezone}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.timeZone.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.timeZone.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -62,6 +72,7 @@
             required
             placeholder="Selling Price List"
             aria-label="Selling Price List"
+            (focusout)="validateInput(f.sellingPriceList, sellingPriceLists)"
             [matAutocomplete]="autoSellingPriceList"
             formControlName="sellingPriceList"
           />
@@ -73,6 +84,10 @@
               <span>{{priceList.name}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.sellingPriceList.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.sellingPriceList.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -81,6 +96,7 @@
             placeholder="Debtor Account"
             aria-label="Debtor Account"
             [matAutocomplete]="autoDebtorAccount"
+            (focusout)="validateInput(f.debtorAccount, accounts)"
             formControlName="debtorAccount"
           />
           <mat-autocomplete #autoDebtorAccount="matAutocomplete">
@@ -91,6 +107,10 @@
               <span>{{account.name}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.debtorAccount.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.debtorAccount.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -98,6 +118,7 @@
             required
             placeholder="Transfer Warehouse"
             aria-label="Transfer Warehouse"
+            (focusout)="validateInput(f.transferWarehouse, warehouses)"
             [matAutocomplete]="autoTransferWarehouse"
             formControlName="transferWarehouse"
           />
@@ -109,6 +130,10 @@
               <span>{{warehouse.name}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.transferWarehouse.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.transferWarehouse.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -116,6 +141,7 @@
             required
             placeholder="POS Profile"
             aria-label="POS Profile"
+            (focusout)="validateInput(f.posProfile, posProfiles)"
             [matAutocomplete]="posProfile"
             formControlName="posProfile"
           />
@@ -127,6 +153,10 @@
               <span>{{profile.name}}</span>
             </mat-option>
           </mat-autocomplete>
+          <mat-error *ngIf="f.posProfile.hasError('falseValse')">
+            You should select a value from dropdown only. 
+            <strong>'{{f.posProfile.value}}'</strong> is not allowed.
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="mat-input-wrapper">
           <input
@@ -224,7 +254,7 @@
       <ion-grid class="ion-padding">
         <ion-row>
           <ion-col>
-            <ion-button color="light" (click)="updateSettings()">
+            <ion-button color="light" [disabled]="!companySettingsForm.valid" (click)="updateSettings()">
               Update
             </ion-button>
           </ion-col>
