--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -99,7 +99,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">
+          <ion-col >
             <mat-form-field class="full-width">
               <mat-label> Campaign Invoice</mat-label>
               <mat-select
@@ -129,6 +129,24 @@
                   {{status}}
                 </mat-option>
               </mat-select>
+            </mat-form-field>
+          </ion-col>
+          <ion-col size="6">
+            <mat-form-field class="full-width">
+              <input matInput placeholder="Select Sales Person"
+                  [formControl]="salesPersonControl"
+                  type="text"
+                  (focusout)="validateInput(salesPersonControl, filteredSalesPersonList)" 
+                  [matAutocomplete]="auto" />
+              <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="setFilter()" >
+                  <mat-option *ngFor="let option of filteredSalesPersonList | async" [value]="option">
+                      {{ option }}
+                  </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="salesPersonControl.hasError('falseValse')">
+                  You should select a value from dropdown only.
+                  <strong>'{{ salesPersonControl.value }}'</strong> is not allowed.
+              </mat-error>
             </mat-form-field>
           </ion-col>
         </ion-row>
