--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/view-purchase-invoice.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/view-purchase-invoice.page.html
@@ -21,7 +21,7 @@
         <ion-segment-button value="0">
           <ion-label>Details</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="1" *ngIf="docstatus !== 2 && permissionState.purchase_receipt.active">
+        <ion-segment-button value="1" *ngIf="(docstatus !== 2) && permissionState.purchase_receipt.active">
           <ion-label>Serials</ion-label>
         </ion-segment-button>
       </ion-segment>
@@ -29,6 +29,6 @@
   </ion-card>
   <div [ngSwitch]="selectedSegment">
     <purchase-details *ngSwitchCase="0"> </purchase-details>
-    <purchase-assign-serials *ngSwitchCase="1"> </purchase-assign-serials>
+    <purchase-assign-serials  *ngSwitchCase="1"> </purchase-assign-serials>
   </div>
 </ion-content>
